--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,20 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports", "transform-decorators-legacy", "transform-runtime"],
+  "plugins": [
+    "tcomb",
+    "transform-decorators-legacy",
+    "transform-runtime"
+  ],
   "env": {
     "test": {
       "plugins": [
         ["webpack-loaders", { "config": "webpack/test.config.js", "verbose": false }]
+      ]
+    },
+    "production": {
+      "plugins": [
+        "transform-decorators-legacy",
+        "transform-runtime"
       ]
     }
   }
