--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-core": "^6.3.15",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-tcomb": "^0.3.24",
     "babel-plugin-transform-decorators-legacy": "^1.2.0",
     "babel-plugin-transform-runtime": "^6.5.2",
     "babel-plugin-webpack-loaders": "^0.8.0",
@@ -52,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flow-bin": "^0.38.0",
     "jsdom": "^9.2.1",
     "minimist": "^1.2.0",
     "mocha": "^3.1.2",
@@ -63,6 +64,7 @@
     "shelljs": "^0.7.0",
     "sinon": "^1.17.1",
     "style-loader": "^0.13.1",
+    "tcomb": "^3.2.16",
     "webpack": "^1.13.0",
     "webpack-hot-middleware": "^2.10.0",
     "webpack-httpolyglot-server": "^0.2.0"
