Adding add-module-exports for backward compatibility

--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["es2015", "stage-0", "react"],
   "plugins": [
     "tcomb",
+    "add-module-exports",
     "transform-decorators-legacy",
     "transform-runtime"
   ],
@@ -13,6 +14,7 @@
     },
     "production": {
       "plugins": [
+        "add-module-exports",
         "transform-decorators-legacy",
         "transform-runtime"
       ]
