--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.3.15",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-tcomb": "^0.3.24",
     "babel-plugin-transform-decorators-legacy": "^1.2.0",
     "babel-plugin-transform-runtime": "^6.5.2",
