--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-dom": "^15.0.2",
     "react-redux": "^4.3.0",
     "redux": "^3.2.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "styled-components": "^1.3.1"
   }
 }
